infra/k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kestra-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: kestra
